# coffeeNetwork

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: coffeeNetwork-docs.md
icon-src/: README.md
scripts/: apply-macos-icon.sh  build-mac.sh  fetch-sing-box.sh  install-sudoers.sh  make-banner.mjs  make-screenshots.mjs
src/: main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs  main.rs  parser.rs  singbox.rs  store.rs  sysproxy.rs
