[package]
name = "splitbox"
version = "0.1.8"
description = "Powerful cross-platform VPN client with smart RU split-tunneling"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "splitbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
url = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
plist = "1"
icns = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
